fix broken styles from merge

--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,7 @@ body {
 
 .container {
   width: 100%;
-  max-width: 90%;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box;
@@ -596,234 +596,6 @@ body {
 
 .bg-main-dark-9 {
   background-color: #070810;
-}
-
-.text-lighter-main {
-  color: #5A5EAA;
-}
-
-.text-hover-lighter-main:hover {
-  color: #5A5EAA;
-}
-
-.bg-lighter-main {
-  background-color: #5A5EAA;
-}
-
-.text-lighter-main-light-1 {
-  color: #6b6eb3;
-}
-
-.text-hover-lighter-main-light-1:hover {
-  color: #6b6eb3;
-}
-
-.bg-lighter-main-light-1 {
-  background-color: #6b6eb3;
-}
-
-.text-lighter-main-light-2 {
-  color: #7b7ebb;
-}
-
-.text-hover-lighter-main-light-2:hover {
-  color: #7b7ebb;
-}
-
-.bg-lighter-main-light-2 {
-  background-color: #7b7ebb;
-}
-
-.text-lighter-main-light-3 {
-  color: #8c8ec4;
-}
-
-.text-hover-lighter-main-light-3:hover {
-  color: #8c8ec4;
-}
-
-.bg-lighter-main-light-3 {
-  background-color: #8c8ec4;
-}
-
-.text-lighter-main-light-4 {
-  color: #9c9ecc;
-}
-
-.text-hover-lighter-main-light-4:hover {
-  color: #9c9ecc;
-}
-
-.bg-lighter-main-light-4 {
-  background-color: #9c9ecc;
-}
-
-.text-lighter-main-light-5 {
-  color: #adafd5;
-}
-
-.text-hover-lighter-main-light-5:hover {
-  color: #adafd5;
-}
-
-.bg-lighter-main-light-5 {
-  background-color: #adafd5;
-}
-
-.text-lighter-main-light-6 {
-  color: #bdbfdd;
-}
-
-.text-hover-lighter-main-light-6:hover {
-  color: #bdbfdd;
-}
-
-.bg-lighter-main-light-6 {
-  background-color: #bdbfdd;
-}
-
-.text-lighter-main-light-7 {
-  color: #cecfe6;
-}
-
-.text-hover-lighter-main-light-7:hover {
-  color: #cecfe6;
-}
-
-.bg-lighter-main-light-7 {
-  background-color: #cecfe6;
-}
-
-.text-lighter-main-light-8 {
-  color: #dedfee;
-}
-
-.text-hover-lighter-main-light-8:hover {
-  color: #dedfee;
-}
-
-.bg-lighter-main-light-8 {
-  background-color: #dedfee;
-}
-
-.text-lighter-main-light-9 {
-  color: #efeff7;
-}
-
-.text-hover-lighter-main-light-9:hover {
-  color: #efeff7;
-}
-
-.bg-lighter-main-light-9 {
-  background-color: #efeff7;
-}
-
-.text-lighter-main-dark-1 {
-  color: #515599;
-}
-
-.text-hover-lighter-main-dark-1:hover {
-  color: #515599;
-}
-
-.bg-lighter-main-dark-1 {
-  background-color: #515599;
-}
-
-.text-lighter-main-dark-2 {
-  color: #484b88;
-}
-
-.text-hover-lighter-main-dark-2:hover {
-  color: #484b88;
-}
-
-.bg-lighter-main-dark-2 {
-  background-color: #484b88;
-}
-
-.text-lighter-main-dark-3 {
-  color: #3f4277;
-}
-
-.text-hover-lighter-main-dark-3:hover {
-  color: #3f4277;
-}
-
-.bg-lighter-main-dark-3 {
-  background-color: #3f4277;
-}
-
-.text-lighter-main-dark-4 {
-  color: #363866;
-}
-
-.text-hover-lighter-main-dark-4:hover {
-  color: #363866;
-}
-
-.bg-lighter-main-dark-4 {
-  background-color: #363866;
-}
-
-.text-lighter-main-dark-5 {
-  color: #2d2f55;
-}
-
-.text-hover-lighter-main-dark-5:hover {
-  color: #2d2f55;
-}
-
-.bg-lighter-main-dark-5 {
-  background-color: #2d2f55;
-}
-
-.text-lighter-main-dark-6 {
-  color: #242644;
-}
-
-.text-hover-lighter-main-dark-6:hover {
-  color: #242644;
-}
-
-.bg-lighter-main-dark-6 {
-  background-color: #242644;
-}
-
-.text-lighter-main-dark-7 {
-  color: #1b1c33;
-}
-
-.text-hover-lighter-main-dark-7:hover {
-  color: #1b1c33;
-}
-
-.bg-lighter-main-dark-7 {
-  background-color: #1b1c33;
-}
-
-.text-lighter-main-dark-8 {
-  color: #121322;
-}
-
-.text-hover-lighter-main-dark-8:hover {
-  color: #121322;
-}
-
-.bg-lighter-main-dark-8 {
-  background-color: #121322;
-}
-
-.text-lighter-main-dark-9 {
-  color: #090911;
-}
-
-.text-hover-lighter-main-dark-9:hover {
-  color: #090911;
-}
-
-.bg-lighter-main-dark-9 {
-  background-color: #090911;
 }
 
 .text-primary {
@@ -2713,13 +2485,6 @@ a:hover {
   }
 }
 
-.contact-section {
-  padding: 1.25rem 1rem 2.5rem;
-  background-image: url("../assets/images/Final_16-9_NoTextB-Fullsize-RGB.jpg");
-  box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.8);
-  background-repeat: no-repeat;
-  background-position: top left;
-  background-size: cover;
 .swiper {
   overflow: hidden;
   margin: 1.5rem 0 2rem;
@@ -5132,6 +4897,145 @@ body {
     box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.453);
     z-index: 999;
   }
+}
+
+.home .container {
+  max-width: 90%;
+}
+
+.home-header-logo {
+  width: 450px;
+}
+
+.home h1,
+h2 {
+  text-wrap: balance;
+}
+
+.home-section img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.home button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  font-weight: bold;
+  border: none;
+  background-color: #484ca0;
+  color: #f2f2f2;
+  border-radius: 50px;
+  width: 300px;
+  height: 60px;
+  transition: ease-in-out;
+  transition-duration: 200ms;
+}
+
+.home button:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 0 35px #484ca0;
+}
+
+.home-btn-icon {
+  height: 30px;
+}
+
+.home header {
+  background-image: url(/images/home/home-header-bg.png);
+  height: 850px;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin-bottom: 60px;
+  position: relative;
+  isolation: isolate;
+}
+
+.home header::after {
+  display: block;
+  content: "";
+  background-image: url(/images/home/swoosh.png);
+  background-size: contain;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  position: absolute;
+  inset: 0;
+}
+
+.bottom-border {
+  border-bottom: 6px solid #f89b21;
+  width: 220px;
+  border-radius: 10px;
+}
+
+.header-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-bg {
+  --bg-image: url(/images/home/home-bg-main.jpg);
+  --bg-image-opacity: 0.2;
+  position: relative;
+  isolation: isolate;
+}
+
+.home-bg::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  inset: 0;
+  background: #f2f2f2;
+  opacity: var(--bg-image-opacity);
+  background-image: var(--bg-image);
+  background-size: 100%;
+  background-position: center center;
+  background-repeat: repeat;
+}
+
+.home-mobile-logo {
+  display: none;
+  width: 210px;
+}
+
+@media (max-width: 1200px) {
+  .home header {
+    height: 900px;
+  }
+}
+@media (max-width: 960px) {
+  .home header {
+    height: 1080px;
+  }
+  .home-icons {
+    display: none;
+  }
+  .bottom-border {
+    display: none;
+  }
+  .home-banner {
+    text-align: center;
+  }
+  .home-header-logo {
+    display: none;
+  }
+  .home-mobile-logo {
+    display: block;
+  }
+  .home button {
+    display: none;
+  }
+}
+.laurel {
+  border: 5px solid #484ca0;
+  padding: 1rem;
+  border-radius: 25px;
+  text-align: center;
 }
 
 .p-0 {
