--- a/mmff/pages/_home.scss
+++ b/mmff/pages/_home.scss
@@ -1,3 +1,9 @@
+.home {
+    .container {
+        max-width: 90%;
+    }
+}
+
 .home-header-logo {
     width: 450px;
 }
